--- a/client/mainnetworkmanger.ui
+++ b/client/mainnetworkmanger.ui
@@ -53,7 +53,7 @@
         <bool>true</bool>
        </property>
        <property name="text">
-        <string>haoxx.imwork.net</string>
+        <string>127.0.0.1</string>
        </property>
       </widget>
      </item>
