--- a/client/chat.ui
+++ b/client/chat.ui
@@ -36,6 +36,12 @@
      <property name="text">
       <string>commit</string>
      </property>
+     <property name="autoDefault">
+      <bool>true</bool>
+     </property>
+     <property name="default">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
   </layout>
